YAML/msTT-2.back.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: back
  namespace: mstt-2
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 

  template:
    metadata:      
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: ibmkettkubernetesacr.azurecr.io/webapitest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
