YAML/msTT-2.back.services.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
  namespace: mstt-2
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: back
